Bug #44059: Make sure that focused buttons are visible
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.2/ucs-4.2-0@78291 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-web/css/form/Button.styl
+++ b/management/univention-web/css/form/Button.styl
@@ -138,12 +138,12 @@
 		opacity: 0.66
 
 /* focused state */
-.umc .dijitButtonFocused .dijitButtonText,
-.umc .dijitDropDownButtonFocused .dijitButtonText,
-.umc .dijitComboButtonFocused .dijitButtonText,
-.umc .dijitToggleButtonFocused .dijitButtonText
-	//TODO: border around button for focused state
-	//text-decoration: underline
+//.umc .dijitDropDownButtonFocused,
+.umc .dijitButtonFocused,
+.umc .dijitComboButtonFocused,
+.umc .dijitToggleButtonFocused
+	.dijitButtonNode
+		background-color: $button-hovered-background-color
 
 /* active, checked status */
 .umc .dijitButtonActive .dijitButtonNode, 
