--- a/management/univention-web/css/site/widgets.styl
+++ b/management/univention-web/css/site/widgets.styl
@@ -45,6 +45,10 @@
 		margin: 0 0 0 -35px
 		box-shadow: none
 
+		&.dijitButtonFocused
+			.dijitButtonNode
+				background-color: $button-hovered-background-color
+
 		.dijitButtonNode
 			height: 32px
 			background-color: transparent
